[tool.poetry]
name = "nsedb"
version = "0.1.0"
description = ""
authors = ["Abbas <abbazs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
python-dateutil = "^2.8.2"
numpy = "^1.22.1"
pandas = "^1.4.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
